--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,7 @@
             android:textSize="15sp"/>
 
     </RelativeLayout>
-
+    <!-- Done by Darrin Cation-->
     <ImageButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
