--- a/app/src/main/res/layout/activity_new_item.xml
+++ b/app/src/main/res/layout/activity_new_item.xml
@@ -36,7 +36,7 @@
                 android:id="@+id/item_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Default Name"
+                android:text="Default"
                 android:textColor="@android:color/black"
                 android:textSize="18sp"/>
 
@@ -54,6 +54,14 @@
             android:layout_height="wrap_content"
             android:layout_gravity="right"
             android:text="Save"/>
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPersonName"
+            android:ems="10"
+            android:id="@+id/Food_Name"
+            android:hint="Enter Food Name" />
 
     </LinearLayout>
 
